Modified .env sample file

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
-OWNER_PRIVATE_KEY=
-MINTER_PRIVATE_KEY=
-CONTRACT_ADDRESS=
+OWNER_PRIVATE_KEY="0x90E84bBa3ee2AF1A00b5E54CC5730F2f5159Cd18"
+MINTER_PRIVATE_KEY="0x90E84bBa3ee2AF1A00b5E54CC5730F2f5159Cd18"
+CONTRACT_ADDRESS="0x406aa4c0f3e400954ee668e1cb95b113fb9e465b"
 # First NFT recipient (receives 1,2)
-RECIPIENT_ONE=
+RECIPIENT_ONE="0x90E84bBa3ee2AF1A00b5E54CC5730F2f5159Cd18"
 # Second NFT recipient (receives 3)
-RECIPIENT_TWO=
+RECIPIENT_TWO="0x90E84bBa3ee2AF1A00b5E54CC5730F2f5159Cd18"
